# context_engineering_MCP

./: .dockerignore  .editorconfig  .env.example  .env.example.backup  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc.js  CLAUDE.md  Dockerfile  Makefile  README.md  README_zh.md  docker-compose.dev.yml  docker-compose.yml  gemini_service.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-security.txt  requirements.txt  security_README.md  security_config.py
.github/workflows/: autonomous-agent.yml  ci.yml  deploy-pages.yml  state-machine.yml
context_engineering/: __init__.py  context_analyzer.py  context_api.py  context_models.py  context_optimizer.py  runtime_health.py  template_manager.py
context_engineering/templates/: 2f65b170-d7df-4ea6-9b20-5af856ec6c20.json  930ab425-2d31-4811-bf1b-d70377dde741.json  c848d440-e094-41f2-bce0-71724283ed34.json
context_engineering/templates/categories/: ai-general-agent-framework.json  ai-multi-agent-workflow.json  ai-yaml-context-agent.json  business-customer-service.json  business-sales-proposal.json  education-lesson-plan.json  productivity-command-stack.json  tech-api-documentation.json  tech-code-review.json
context_engineering/templates/collections/: business-suite.json
context_engineering/templates/examples/: README.md  business-templates-guide.md  command-stack-example.md  general-agent-framework-example.md  multi-agent-workflow-example.md  yaml-context-agent-example.md
context_engineering/templates/presets/: default-configurations.json
mcp-server/: context_mcp_server.js
operations/: README.md  miyabi-ops.sh
scripts/: check_runtime_health.py  check_todos.py  docker-dev.sh  quickstart.sh  run-mcp-server.sh  run_quality_cycle.py  start_context_engineering.sh  start_workflow_system.sh  test-mcp.sh  update_github_repo.sh  validate-docker.sh  validate_env.py
templates/: 02602f97-8505-44ae-8a0a-6dbce35da888.json  045c700d-4aca-4e9a-9ea9-e1ffa0a8d9f2.json  0cb867fc-68b8-4c45-b833-b7d0be9fdd4d.json  15d7d40c-9e71-404d-b6f2-cfac4882aa30.json  1643cdc4-30ae-485c-938e-1a65e94a6537.json  1fa50cb3-1b3a-4d11-ae3e-88da4e5b2120.json  25b9c196-1f9b-44b7-9af0-7b87332f2d93.json  2b50609d-758b-43cc-92dd-7af00c63887c.json  33add8d6-a174-4cbf-89d8-64bd714514e2.json  5b30c9c6-d997-4ed0-b998-5618ce1c4efc.json  643eece5-f755-440b-ba2b-e078bcc0cf71.json  646233dd-a883-4f7a-bedc-cabfbdec8526.json  68de3709-e5b2-4453-8ed8-f1657cd5f33d.json  77e6dc6a-aaf7-4e8b-acf4-9fd0c4f65426.json  8c453fa2-4767-43b5-bab1-1a25a3979cb3.json  8daf321c-e942-49d6-bd67-5ebd09b8ce73.json  8f443cdb-1c00-4710-b177-c17d9baef169.json  90f23da4-28b5-49b2-ab1c-6516303ee359.json  9184535b-942b-444a-a2a7-078564719d99.json  93d8ba9c-6673-414d-ad40-26a3f706982e.json  944163a9-fa57-4efc-abce-1ddf98897268.json  94d704e2-ce03-4c36-ac15-64bf184c0156.json  9a92f9ff-d3c6-41fe-8f95-ae3085389521.json  9b961b3f-5213-4008-b380-fd6d28994137.json  a539fa31-8643-4de8-80ef-34b01a4c8953.json  b64cb096-419b-405b-b953-693f9bf202cf.json  b6cd73c2-07cf-44df-83bd-9a1ea3b4aaf1.json  b8ecbb95-f7c3-4a1a-90b5-fc834b3d3bcc.json  bd663aa3-f8fa-4a81-b95a-bf243f5c0ff4.json  c00df091-ffae-43aa-9e81-115c89a3c411.json  c8cdb139-2a60-416b-befb-68cc832cdcfd.json  ccb94440-375e-49dc-b2e5-f6e088fd436f.json  d30ebdc8-45ca-4b7a-a317-d6e0e7293271.json  e0f02fef-e89a-476c-922b-2ace124c83f1.json  ee11ceaa-112b-4abf-9d1d-7f3cc0ef4439.json  ee78a838-7d81-4f4c-877d-a269a4226a35.json  f0904a78-8787-4b25-853c-07ece3f7e8a0.json  f179c378-6f6d-4fae-b3a9-d6bb5d602a90.json
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_context_api.py
tests/unit/: test_context_analysis_and_optimizer.py  test_context_api_helpers.py  test_context_models.py  test_package_exports.py  test_runtime_health.py  test_template_manager.py
workflow_system/: requirements.txt  workflow_api.py
